--- a/quakes.Rmd
+++ b/quakes.Rmd
@@ -3,6 +3,8 @@ title: "Example with Git"
 output: html_notebook
 ---
 
+# Introduction
+
 First, we load the dataset from "quakes", a built in data set with R.
 
 ```{r}
@@ -10,3 +12,10 @@ earthquakes <- data(quakes)
 print(summary(quakes))
 ```
 
+# Background
+
+This is my background history
+
+# Analysis
+
+This is analysis
